--- a/前端规范化/4. ESLint_常见问题.md
+++ b/前端规范化/4. ESLint_常见问题.md
@@ -46,7 +46,7 @@
    - 测试二：配置lint脚本；
 
      ``` js
-     "lint": "eslint --fix ."
+     "lint": "eslint --fix **/*.{js,ts}"
      # 该指令会lint除.eslintignore文件中忽略外的所有文件
      ```
 
