--- a/前端规范化/5. stylelint.md
+++ b/前端规范化/5. stylelint.md
@@ -84,12 +84,16 @@
    > rules 优先级大于 extends，建议采用 extends 方式统一管理
 
    ``` 
-   /**/*.*
-   !/src/**/*.css
-   !/src/**/*.sass
-   !/src/**/*.scss
-   !/src/**/*.less
-   !/src/**/*.vue
+   /dist/*
+   .local
+   .history
+   .output.js
+   /node_modules/**
+   
+   **/*.svg
+   **/*.sh
+   
+   /public/*
    ```
 
 4. 检验stylelint是否有效：
@@ -98,7 +102,7 @@
    * 测试二：配置lint脚本；
 
     ``` json
-    "slint": "stylelint --fix ."
+    "slint": "stylelint --fix **/*.{css,scss,scss,vue,html}"
     # 这个指令会lintfix除.stylelintignore文件中忽略外的所有文件
     ```
 
