--- a/正则表达式.md
+++ b/正则表达式.md
@@ -194,6 +194,35 @@ console.log('1999-12-31'.match(RE_DATE))
 ]
 ```
 
+使用正则表达式实现addClass和removeClass
+
+
+``` js
+function addClass(elem, className) {
+  elem.className = className
+    .match(/\S+/g)
+    .reduce(function (v, t) {
+      if (!v.includes(t)) v.push(t)
+      return v
+    }, elem.className.match(/\S+/g))
+    .join(' ')
+}
+
+function removeClass(elem, className) {
+  elem.className = className
+    .match(/\S+/g)
+    .reduce(function (v, t, i) {
+      if (v.includes(t)) v.splice(i, 1)
+      return v
+    }, elem.className.match(/\S+/g))
+    .join(' ')
+}
+
+const div = document.querySelector('div')
+addClass(div, '  div2   div4   div5 ')
+removeClass(div, '  div2   div4   div5 ')
+```
+
 > 设置正则表达式的`lastIndex`属性，对`match`方法无效，匹配总是从字符串的第一个字符开始。
 
 ``` js
@@ -298,6 +327,63 @@ template.replace(
 
 > replace的结果不受正则对象lastIndex属性的影响！
 
+**`replace`使用实例：**
+
+``` js
+// 编译格式字符串
+const str = '3[ab]12[cd]'
+const res = str.replace(/(\d+)\[([a-zA-Z]+)\]/g, function (item, a, b) {
+  return b.repeat(a)
+})
+// abababcdcdcdcdcdcdcdcdcdcdcdcd
+
+// 递归编译嵌套格式字符串
+let str = '3[2[a]3[bc]]2[ab]'
+function stringify(str) {
+  if (!/\d+\[\w+\]/.test(str)) return str
+  return stringify(
+    str.replace(/(\d+)\[(\w+)\]/g, function (item, a, b) {
+      return b.repeat(a)
+    })
+  )
+}
+str = stringify(str)
+// aabcbcbcaabcbcbcaabcbcbcabab
+
+// 解析query字符串
+const str = 'a=3&b=a&c=5&d=6'
+const o = {}
+str.replace(/(\w+)=([^&]+)/g, function (item, a, b) {
+  o[a] = isNaN(b) ? b : Number(b)
+})
+// { a: 3, b: 'a', c: 5, d: 6 }
+
+// 对手机号进行隐私处理
+const str = '18617890567'
+const res = str.replace(/(\d{3})\d{4}(\d{4})/, '$1****$2')
+// 186****0567
+
+// 对身份证号进行隐私处理
+const str = '11012219980524401X'
+const res = str.replace(/(\d{4})\d{11}(\d{3}|\d{2}X)/, '$1***********$2')
+// 1101***********01X
+
+// 使用正则计算字符串加法
+let str = '1+2+3='
+// 这边的后行断言匹配到的是等号后面的空
+str = str.replace(/(?<==)/, function (item, index, str) {
+  // 倒数第一个参数是原字符串
+  // 倒数第二个参数是开始匹配的位置
+  return str
+    .match(/(\d+)\+(\d+)\+(\d+)/)
+    .slice(1)
+    .reduce(function (v, t) {
+      return Number(v) + Number(t)
+    })
+})
+console.log(str)
+```
+
 #### 5. String.prototype.split()
 
 字符串对象的`split`方法按照正则规则分割字符串，返回一个由分割后的各个部分组成的数组。该方法接受两个参数，第一个参数是正则表达式，表示分隔规则，第二个参数是返回数组的最大成员数。
@@ -384,7 +470,7 @@ template.replace(
 
 #### 4. 字符类
 
-字符类（class）表示有一系列字符可供选择，只要匹配其中一个就可以了。所有可供选择的字符都放在方括号内，比如`[xyz]` 表示`x`、`y`、`z`之中任选一个匹配。有两个字符在字符类中有特殊含义。
+字符类（class）表示有一系列字符可供选择，只要匹配其中一个就可以了。所有可供选择的字符都放在方括号内，比如`[xyz]` 表示`x`、`y`、`z`之中任选一个匹配。有两个字符在字符类中有特殊含义(其它字符，包括元字符，在字符类中都没有特殊含义。如果要匹配\，由于它自己本身表示转义符，所以应该写成\\\\)。
 
 1. 如果方括号内的第一个字符是`[^]`，则表示除了字符类之中的字符，其他字符都可以匹配。比如，`[^xyz]`表示除了`x`、`y`、`z`之外都可以匹配。如果方括号内没有其他字符，即只有`[^]`，就表示匹配一切字符，其中包括换行符。相比之下，点号作为元字符（`.`）是不包括换行符的。
 
@@ -415,6 +501,22 @@ template.replace(
    // true
    // 由于反斜杠（'\'）的ASCII码在大写字母与小写字母之间，结果会被选中
    ```
+
+**字符类使用实例：**
+
+``` js
+// 匹配/1-31/
+/^[1-9]$|^[12]\d$|^3[01]$/
+
+//匹配0-255
+/^\d$|^[1-9]\d$|^1\d{2}$|^2[0-4]\d$|^25[0-5]$/  
+
+// 0.0.0.0-255.255.255.255 匹配IP地址
+/^(\d|[1-9]\d|1\d{2}|2[0-4]\d|25[0-5])(\.(\d|[1-9]\d|1\d{2}|2[0-4]\d|25[0-5])){3}$/
+
+// 匹配中文
+/[\u4e00-\u9fd5]{2,4}/
+```
 
 #### 5. 预定义模式
 
@@ -660,6 +762,26 @@ var m = 'abcabc'.match(/(.)b(.)/g);
 
 正则表达式内部，还可以用`\n`引用括号匹配的内容，`n`是从1开始的自然数，表示对应顺序的括号。
 
+**`\n`使用实例：**
+
+``` js
+// 分割字符串
+var str = 'aabbbbbbdddddeeeeeef'
+str.match(/(\w)\1*/g)
+
+// 统计第一个字符的个数
+var str = 'hjhjds jksjsdkj alkjd jksdj kswdjli qwdo qijd aksijdais  asdiuaiusd asdiuasdkjh'
+const o = str
+  .split('')
+  .sort()
+  .join('')
+  .match(/(.)\1*/g)
+  .reduce(function (v, t) {
+    v[t[0]] = t.length
+    return v
+  }, {})
+```
+
 ``` js
 /(.)b(.)\1b\2/.test("abcabc")
 // true
@@ -751,6 +873,25 @@ RE_TWICE.test('abc!abc!ab') // false
   var m = 'abc'.match(/b(?=c)/);  // ["b"]
   ```
 
+  **先行断言的妙用**
+
+  ``` js
+  // (?=\D+\d) 起始字符开始首字母不能是数字，但是在整个字符串中必须包含数字
+  // (?=.*[a-z]) 在任意位置包含a-z的小写字母
+  // (?=.*[A-Z]) 在任意位置包含A-Z的大写字母
+  // [a-zA-Z0-9_-$&!]{8,16} 密码实际包含的字符，要求最少8位，最大16位
+  
+  // 高级密码
+  ;/^(?=\D+\d)(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9_\-$&!]{8,16}$/.test('xietianabc')
+  
+  // 中级密码
+  ;/^(?=\D+\d)(?=.*[a-z])[a-zA-Z0-9_\-$&!]{8,16}$|^(?=\D+\d)(?=.*[A-Z])[a-zA-Z0-9_\-$&!]{8,16}$|^(?=.*[A-Z])(?=.*[a-z])[a-zA-Z0-9_\-$&!]{8,16}$/.test(
+    'xietian12'
+  )
+  // 初级密码
+  ;/^\d{8,16}$|^[a-z]{8,16}$|^[A-Z]{8,16}$/.test('xietianabc')
+  ```
+
 - **先行否定断言**
 
   `x(?!y)`称为先行否定断言（Negative look-ahead），`x`只有不在`y`前面才匹配，`y`不会被计入返回结果。比如，要匹配后面跟的不是百分号的数字，就要写成`/\d+(?!%)/`。“先行否定断言”中，括号里的部分是不会返回的。
@@ -767,7 +908,7 @@ RE_TWICE.test('abc!abc!ab') // false
   /(?<=\$)\d+/.exec('Benjamin Franklin is on the $100 bill')  // ["100"]
   ```
 
-  “后行断言”的实现，需要先匹配`/(?<=y)x/`的`x`，然后再回到左边，匹配`y`的部分。这种“先右后左”的执行顺序，与所有其他正则操作相反，导致了一些不符合预期的行为。
+  “后行断言”的实现，需要先匹配`/(?<=y)x/`里的`x`，然后再回到左边，匹配`y`的部分。这种“先右后左”的执行顺序，与所有其他正则操作相反，导致了一些不符合预期的行为。
 
    首先，后行断言的组匹配，与正常情况下结果是不一样的。
 
