--- a/前端规范化/2. prettier.md
+++ b/前端规范化/2. prettier.md
@@ -55,7 +55,7 @@
    > 在package.json中配置一个scripts：
 
    ``` json
-   "prettier": "prettier --write ."
+   "prettier": "prettier --write src/**/*.{js,ts}"
    # 这个指令可以一次性格式化当前项目中的全部文件，免去了项目刚创建时一个一个文件去修改，当然格式化的文件会忽略掉.prettierignore中定义的文件
    ```
 
