--- a/前端规范化/4. ESLint_常见问题.md
+++ b/前端规范化/4. ESLint_常见问题.md
@@ -30,13 +30,11 @@
 
      ``` 
      extends: [
-         "plugin:vue/vue3-essential",
-         "eslint:recommended",
-         "@vue/typescript/recommended",
-         'plugin:prettier/recommended'
-       ],
+     	'standard', 
+     	'plugin:prettier/recommended' // !prettier插件
+     ],
      ```
-
+   
 3. 测试eslint是否可用：
 
    - 测试一：保存代码(保存自动进行lintfix)；
