--- a/Vue/常见问题.md
+++ b/Vue/常见问题.md
@@ -249,3 +249,8 @@ export default {
 </script>
 ```
 
+### key属性
+
+- 在vue2中，template标签不能写key属性，而在vue3中可以
+- key作为一个DOM节点的**标识值**，结合Diff算法可以实现对节点的复用。(key相同的节点会被复用)
+- 只有当key发生改变时，才会触发节点的重新渲染。否则Vue将会复用之前的节点，通过改变节点的属性来实现节点的更新
