--- a/React/不可变数据结构.md
+++ b/React/不可变数据结构.md
@@ -123,7 +123,7 @@ this.setState((prevState) => {
 >
 > ```js
 > //页面引入 
-> import { produce} from "immer"; 
+> import { produce } from "immer"; 
 > let currentState = {
 >   p: {
 >     x: [2],
@@ -309,7 +309,7 @@ export default createStore(reducer, initialState);
 
 - **src/index.js**
 
-```js
+```jsx
 import React from "react";
 import ReactDOM from "react-dom/client";
 import App from "./App";
