--- a/Vue/常见问题.md
+++ b/Vue/常见问题.md
@@ -102,7 +102,7 @@ computed: {
 ```
 
 ```jsx
-<div                                                               
+<div
   class="file_name"                                     
   v-for="(fileMsg,index) in fileMsgListCom"             
   :key="fileMsg.id"                                          
@@ -254,3 +254,92 @@ export default {
 - 在vue2中，template标签不能写key属性，而在vue3中可以
 - key作为一个DOM节点的**标识值**，结合Diff算法可以实现对节点的复用。(key相同的节点会被复用)
 - 只有当key发生改变时，才会触发节点的重新渲染。否则Vue将会复用之前的节点，通过改变节点的属性来实现节点的更新
+
+### createApp方法
+
+> **template模板分享方式：**
+>
+>    + 方式一：使用script标签，并且标记它的类型为 x-template
+>    + 方式二：使用任意标签，并设置Id(推荐使用template元素)
+>
+> template元素是一个原生的html元素，它是是一种用于保存客户端内容的机制，该标签以及里面的内容在加载页面时不会被渲染呈现，但可以在运行时使用JavaScript获取到该标签，对其进行实例化（document.queryselector）。因此该标签很适合用做写vue的模板内容，因为他不会被渲染到页面中，但是他可以被vue获取并使用
+>
+> 在createApp的对象中，如果字符串是以 # 开始，那么它将被用作 querySelector，并且使用匹配元素的innerHTML作为模板字符串
+
+```html
+<!- 挂载点 ->
+<div id="app"></div>
+<!- 组件的模板，一定要写id ->
+<template id="my-app">
+    <div>
+        <h2>{{counter}}</h2>
+        <button @click="increment">+1</button>
+        <button @click="decrement">-1</button>
+    </div>
+</template>
+<script type="x-template" id="my-app">
+    <div>
+        <h2>{{counter}}</h2>
+        <button @click="increment">+1</button>
+        <button @click="decrement">-1</button>
+    </div>
+</script>
+<!- vue打包文件 ->
+<script type="text/javascript" src="https://unpkg.com/vue"></script>
+<!- 业务代码 ->
+<script>
+    const App = {
+        // 分享式的模板写法
+        template: "#my-app",
+        // 不分享的模板写法
+        template: `<div>
+            <h2>{{counter}}</h2>
+            <button @click="increment">+1</button>
+            <button @click="decrement">-1</button>
+        </div>`,
+        data() {
+            return {
+                counter: 0
+            }
+        },
+        methods: {
+            increment() {
+                this.counter++
+            },
+            decrement() {
+                this.counter--
+            }
+        }
+    }
+    const app = Vue.createApp(App)
+    //mount方法会自动解析参数(document.querySelector)
+    app.mount("#app")
+</script>
+```
+
+### mehtod中定义的方法不能是箭头函数
+
+> methods对象中的方法不应该用箭头函数来定义，因为箭头函数绑定了父级作用域的上下文，所以this将不会按照期望指向组合的实例，this将是window
+
+### vue父子组件生命周期执行顺序
+
+- **挂载阶段**
+  - 父 beforeCreate
+  - 父 created
+  - 父 beforeMount
+  - 子 beforeCreate
+  - 子 created
+  - 子 beforeMount
+  - 子 mounted
+  - 父 mounted
+
+- **更新阶段**
+  - 父 beforeUpdate
+  - 子 beforeUpdate
+  - 子 updated
+  - 父 updated
+- **销毁阶段**
+  - 父 beforeDestory
+  - 子 beforeDestory
+  - 子 destoryed
+  - 父 dest
