--- a/WebStandard/2. prettier.md
+++ b/WebStandard/2. prettier.md
@@ -1,4 +1,4 @@
-> Prettier 是一款强大的代码格式化工具，支持 JavaScript、TypeScript、CSS、SCSS、Less、JSX、Angular、Vue、GraphQL、JSON、Markdown 等语言，基本上前端能用到的文件格式它都可以搞定，是当下最流行的代码格式化工具。与ESLint不同，prettier只用于代码风格格式化。
+> Prettier 是一款强大的代码格式化工具，支持 JavaScript、TypeScript、CSS、SCSS、Less、JSX、Angular、Vue、GraphQL、JSON、Markdown 等语言，基本上前端能用到的文件格式它都可以搞定，是当下最流行的代码格式化工具。与ESLint不同，prettier只用于代码风格格式化
 >
 > 在一个项目中，我们不能强制别人安装prettier插件，但是我们可以强制要求安装prettier模块。prettier模块可以帮助我们格式代码风格，而prettier插件的作用是让我们在vscode中可以看到我们哪里有格式错误，方便了我们的开发：
 
@@ -54,8 +54,9 @@
 
    > 在package.json中配置一个scripts：
 
-   ``` json
+   ``` yaml
    "prettier": "prettier --write src/**/*.{js,ts}"
-   # 这个指令可以一次性格式化当前项目中的全部文件，免去了项目刚创建时一个一个文件去修改，当然格式化的文件会忽略掉.prettierignore中定义的文件
+   # 这个指令可以一次性格式化当前项目中的全部文件，免去了项目刚创建时一个一个文件去修改
+   # 格式化时prettier会自动忽略掉.prettierignore中配置的文件
    ```
 
