--- a/WebStandard/5. stylelint.md
+++ b/WebStandard/5. stylelint.md
@@ -101,7 +101,7 @@
    * 测试一：保存代码(保存自动进行lintfix)；
    * 测试二：配置lint脚本；
 
-    ``` json
+    ``` yaml
     "slint": "stylelint --fix **/*.{css,scss,scss,vue,html}"
     # 这个指令会lintfix除.stylelintignore文件中忽略外的所有文件
     ```
