--- a/javaScript/异步处理.md
+++ b/javaScript/异步处理.md
@@ -185,7 +185,7 @@ http.createServer(async function(req,res){
 
 ##### 携带用户凭据
 
-redentials，即用户凭证，是指 cookie、HTTP身份验证和TLS客户端证书。需要注意的是，它不涉及代理身份验证或源标头。
+credentials，即用户凭证，是指 cookie、HTTP身份验证和TLS客户端证书。需要注意的是，它不涉及代理身份验证或源标头。
 
 XMLHttpRequest 的 withCredentials 属性默认值为false。在获取同域资源时设置 withCredentials 没有影响。也就是说在跨域访问想要携带cookie时，必须把withCredentials设置为true。
 
@@ -200,12 +200,12 @@ xhr.open(method, AjaxVo.PROTOCOL + AjaxVo.URl + ':' + AjaxVo.Port + router)
 xhr.send(data)
 ```
 
-同时必须在服务端允许用户凭据跨域：
+同时必须在服务端允许用户凭据跨域。另外要注意如果前端配置了这个withCredentials=true，后段设置Access-Control-Allow-Origin不能为 " * ",必须是你的源地址：
 
 ``` js
 res.writeHead(200, {
     'Content-Type': 'application/json',
-    'Access-Control-Allow-Origin': '*',
+    'Access-Control-Allow-Origin': 'source address',
     'Access-Control-Allow-Headers': '*',
     'Access-Control-Allow-Credentials': 'true'
 })
@@ -428,7 +428,7 @@ img.src = "http://www.example.com/test?name=Nicholas"
 
 ##### JSONP
 
->`JSONP`是‘`JSON with  padding`’的简写，是在`web`服务上流行的一种`JSON`变体。`JSONP`看起来跟`JSON`一样，只是被包在一个函数调用中。
+>`JSONP`是‘`JSON with padding`’的简写，是在`web`服务上流行的一种`JSON`变体。`JSONP`看起来跟`JSON`一样，只是被包在一个函数调用中。
 >
 >`JSONP`调用是通过动态创建`<script>`元素并为其`src`属性指定跨域`URL`实现的。此时的`<script>`与`<img>`元素类似，能够不受限制地从其他域加载资源。因为`JSONP`是有效的`JavaScript`代码，因此`JSONP`响应在被加载完成之后会立即执行。
 
@@ -471,18 +471,6 @@ http
 ``` js
 "https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su?wd=关键字&json=1&p=3&sid=22084_1436_13548_21120_22036_22073&req=2&csor=0&cb=要回调的函数"
 ```
-
-#### XSS攻击
-
-> `XSS`攻击通常指的是通过利用网页开发时留下的漏洞，通过巧妙的方法注入恶意指令代码到网页，使用户加载并执行攻击者恶意制造的网页程序。这些恶意网页程序通常是`JavaScript`，但实际上也可以包括`Java`、 `VBScript`、`ActiveX`、 `Flash` 或者甚至是普通的`HTML`。攻击成功后，攻击者可能得到包括但不限于更高的权限（如执行一些操作）、私密网页内容、会话和`cookie`等各种内容。
-
-比如说在某交流网站的评论区中，发送了一段评论，而这段评论是一段代码：
-
-``` js
-<a href="javascirpt: ...."><img src="image url"></a>
-```
-
-只需要在`a`标签中的`href`中写一段异步请求代码，就可以携带用户的一些数据，如`cookie`值等。为了效果更好，可以把图片设为更吸引人的内容，并且尺寸调小，这样就会有人去点击，从而达到我们的目的。
 
 #### 请求头：
 
