--- a/React/补充知识.md
+++ b/React/补充知识.md
@@ -165,8 +165,8 @@ console.log(React);
 
 ```js
 // 对于 export default 的变量，TS 会将其放在 module.exports 的 default 属性上
-export const name = "esm";  // before
 // 对于 export 的变量，TS 会将其放在 module.exports 对应变量名的属性上
+export const name = "esm";  // before
 export default {
    name: "esm default",
 };
@@ -468,7 +468,7 @@ const LikeButton: React.FC = () => {
 export default LikeButton;
 ```
 
-由于like变量是定义在组件外，所以不同渲染间是可以共用该变量,所以3秒后获取的like值就是最新的like值。但是改变like并不会触发组件重新渲染，因此看起来like一起是0。并且组件前定义的 global 变量，是属于全局的。如果代码中有多个相同的组件，那这个 global 变量在全局是同一个，他们会互相影响
+由于like变量是定义在组件外，所以不同渲染间是可以共用该变量,所以3秒后获取的like值就是最新的like值。但是改变like并不会触发组件重新渲染，因此看起来like一直是0
 
 ![c8706c7482867dde33f0bb23ce4695b3](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/c8706c7482867dde33f0bb23ce4695b3.gif)
 
