--- a/Tools/调试技巧.md
+++ b/Tools/调试技巧.md
@@ -90,6 +90,30 @@ settimeout(() => {
 
 > 这两个函数中chrome给我们提供的，他们的参数都是一个函数，可以在控制台中使用他们。作用就是会给传入的函数打上一个断点，打上断点之后，只要运行到该函数，就会触发断点。如果要清除这个函数上的断点，就必须使用undebug来清除
 
+```html
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <button id='btn'>click me</button>
+    <script>
+        btn.onclick = test
+        function test() {
+            console.log('test');
+        }
+        test()
+    </script>
+</body>
+
+</html>
+```
+
+在控制台中输入`debug(test)`之后，然后点击按钮就会进入断点调试。想要关闭断点只需要运行`undebug(test)`
+
 ## 在浏览器中编辑CSS并同步到源码文件
 
 1. 源代码 => 文件系统 => 向工作区添加文件夹
