--- a/WebStandard/5. stylelint.md
+++ b/WebStandard/5. stylelint.md
@@ -127,3 +127,18 @@
      position: inherit;
    }
    ```
+   
+   或是直接在配置文件中进行全局忽略：
+   
+   ```js
+   module.exports = {
+     ... ...
+     rules: {
+       'font-family-no-missing-generic-family-keyword': null,
+       'selector-class-pattern': null
+     }
+   }
+   ```
+   
+   
+
