--- a/WebStandard/6. husky.md
+++ b/WebStandard/6. husky.md
@@ -32,3 +32,6 @@ $ npx husky-init
 
 ![image-20210723112932943](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/Snipaste_2022-06-19_17-26-28.png)
 
+## 注意
+
+对于`liux`或者`macos`系统中，可能会出现 **因为没有将钩子 '.husky/pre-commit' 设置为可执行钩子被忽略。** 的错误。这是因为当前的文件没有执行权限，只需要执行`chmod +x .husky/pre-commit`更改文件为可执行即可
