--- a/Css/主题切换方案.md
+++ b/Css/主题切换方案.md
@@ -1,3 +1,5 @@
+# JS方式
+
 > 这种方式的原理就是在body上面挂载一大堆的全局变量，这是css3的新特性，这样我们就可以通过以下方式来引用这些变量：
 >
 > ```css
@@ -128,4 +130,47 @@ const HECO = {
 
 export default HECO;
 ```
+
+# CSS方式
+
+> prefers-color-scheme是CSS 媒体特性【@media】用于检测用户是否有将操作系统的主题色设置为亮色【light】或者暗色【dark】，这俩个也是prefers-color-scheme重要属性
+>
+> 当前prefers-color-scheme新特性支持各大主流电脑【window和IOS系统，Linux系统可以用第三方工具】端浏览器谷歌、火狐等，包括手机端的安卓和苹果
+>
+> **当操作系统电脑端或者手机操作系统主题颜色变化时就能监听到主题，然后就会按照你预期设置的颜色进行渲染主题色**
+
+```css
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
+```
+
+上面的css定义了两种主题下的一些变量，这样在我们的手机或电脑的颜色主题发生变化时，就会被媒体查询所监测到，然后覆盖主题变量
+
+除了css媒体能监听操作系统主题变化，js也能监听的，当监听到后可以增强js业务逻辑，比如设置某个主题下布局变化
+
+```js
+const scheme = window.matchMedia('(prefers-color-scheme: dark)')
+if (scheme.matches) {
+    // 深色模式业务处理代码
+    console.log('深色模式');
+    tipText.innerHTML = darkTip
+} else {
+    // 浅色模式业务处理代码
+    console.log('浅色模式');
+    tipText.innerHTML = lightTip
+}
+```
+
+
 
