--- a/nodeJS/大文件切片上传.md
+++ b/nodeJS/大文件切片上传.md
@@ -1,14 +1,14 @@
-### 大文件切片上传
+# 大文件切片上传
 
 > 对于文件较大的上传进行分片上传,把一个大文件，拆分成若干个小的文件，然后再上传。文件切片的方案：
 >
-> 1. 指定大小，然后来切文件  大小固定，数量不定；
+> 1. 指定大小，然后来切文件，大小固定，数量不定；
 >
 > 2. 指定数量，然后来切文件，数据固定，大小不定；
 >
 > 上传时，要有一个编号，这样在服务器端才能根据此编号完成文件的合并操作
 >
-> 还需要根据文件的内容，生成一个根据内容来得到的一个唯一随机字符串，此字符串一定要和内容关联，只要内容有变化，则随机字符串要有变化，如果内容没有变化，则字符串不变(hash字符串[hash值])，这样就可以防止重复上传某一个文件。
+> 还需要根据文件的内容，生成一个根据内容来得到的一个唯一随机字符串，此字符串一定要和内容关联，只要内容有变化，则随机字符串要有变化，如果内容没有变化，则字符串不变(hash字符串[hash值])，这样就可以防止重复上传某一个文件
 >
 > 并且使用了hash值，在合并的时候，就可以用此hash值，来当作合并后的文件名称：
 >
@@ -20,26 +20,26 @@
 >
 > - ==> hash值.mp4 完整的文件
 
-#### spark-md5
+## spark-md5
 
-> SparkMD5是 MD5算法的一个快速 md5实现。这个脚本基于 JKMmd5库，它是最快的算法。它最适合浏览器使用，因为 nodejs 版本可能更快。
+> SparkMD5是MD5算法的一个快速md5实现。这个脚本基于JKMmd5库，它是最快的算法。它最适合浏览器使用，因为nodejs版本可能更快
 
 **安装：**
 
-```js
+```shell
 npm install --save spark-md5
 ```
 
 **基本用法：**
 
-```
+```js
 var hexHash = SparkMD5.hash('Hi there');        // hex hash
 var rawHash = SparkMD5.hash('Hi there', true);  // OR raw hash (binary string)
 ```
 
 **增量添加：**
 
-```
+```js
 var spark = new SparkMD5();
 spark.append('Hi');
 spark.append(' there');
@@ -47,9 +47,9 @@ var hexHash = spark.end();                 // hex hash
 var rawHash = spark.end(true);             // OR raw hash (binary string)
 ```
 
-#### 文件切片上传：
+## 文件切片上传：
 
-**server：**
+### **server：**
 
 ```js
 var express = require("express");
@@ -169,7 +169,7 @@ router.get("/mergeChunkFile", (req, res) => {
 module.exports = router;
 ```
 
-**client：**
+### **client：**
 
 - /api/videoApi.js
 
