--- a/Css/媒体查询.md
+++ b/Css/媒体查询.md
@@ -1,3 +1,103 @@
+# CSS媒体查询
+
+> 媒体查询英文全称Media Query，顾名思义就是查询用户所使用的媒体或者媒介。这里的媒体指的是用户所使用的终端
+>
+> 到目前为止，网页的浏览终端是越来越多了，用户可以通过不同的终端来浏览网页，比如：电脑、平板电脑、手机、电视等。尽管我们无法保证一个网站在不同屏幕尺寸和不同设备上看起来一模一样，但是至少要让我们的Web页面能适配用户的终端
+>
+> 然而在CSS3中的Media Query模块就是用来让一个页面适应不同的终端样式
+
+## Media Type
+
+> 媒体类型就是指media query所能支持查询到的设备或场景类型，常用的有：
+
+- all：全部
+- screen：屏幕
+- print：页面打印或打印预览模式
+
+需要注意的是 如果未指明媒体设备，那么默认为all，就是应用于所有设备
+
+## 媒体类型的引用方法
+
+> 引用媒体类型的方法有很多，常见的媒体类型引用方法有：`link标签`，`xml方式`，`@import`，`@media`
+
+### link标签
+
+link标签引入媒体类型其实就是在link标签引用样式的时候，通过link标签中的media属性来指定不同的媒体类型，比如：
+
+```html
+<link rel="stylesheet" href="index.css" media="screen">
+<link rel="stylesheet" href="demo.css" media="print">
+```
+
+### xml方式
+
+xml方式和link方式比较相似，也是通过media属性来指定，如下：
+
+```xml
+<? xml-stylesheet rel="stylesheet" media="screen" href="index.css" ?>
+```
+
+### @import
+
+@import引入媒体类型主要方式有两种，一种是在CSS文件中通过@import引入另一个样式文件，另一种是在style标签中引入
+
+```css
+@import url('./index.css') screen;
+```
+
+在style标签中引入媒体类型:
+
+```css
+<style>
+    @import url('./index.css') screen;
+</style>
+```
+
+### @meida方式
+
+@media是CSS3中新引进的一个特性，叫媒体查询。@media引入媒体同样也有两种方式，如下：
+
+在样式文件中引入媒体类型：
+
+```css
+@media screen {
+      /*具体样式*/
+}
+```
+
+在style标签中引入媒体类型:
+
+```css
+<style>
+  @media screen {
+      /*具体样式*/
+  }
+</style>
+```
+
+## 媒体查询的语法
+
+> 可以将媒体查询看成一个公式：**Media Type(判断条件) + CSS(符合条件的样式规则)**
+
+```html
+<link rel="stylesheet" media="screen and (min-width:600px)" href="style.css" />
+```
+
+```css
+@meida screen and (min-width:600px){
+  /* 具体样式 */
+}
+```
+
+```css
+/*当屏幕宽度大于等于400px并且小于等于750px的时候样式生效*/
+@meida screen and (min-width:400px) and (max-width:750px) {
+  /* 具体样式 */
+}
+```
+
+# JS媒体查询
+
 ## matchMedia
 
 > `Window`的**`matchMedia()`**方法返回一个新的`MediaQueryList`对象，表示指定的[媒体查询](https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries)字符串解析后的结果。返回的`MediaQueryList`可被用于判定`Document`是否匹配媒体查询，或者监控一个`document`来判定它匹配了或者停止匹配了此媒体查询
